add code hints to the editor

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,8 @@
 loop:
 	ld ($ffff), a
 	inc a
-	jp loop</textarea>
+	jp loop
+</textarea>
 		</div>
 		<div class="toolkit">
 			<p>tools here</p>
