run/stop controls

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,8 @@ loop:
 			<h2>Program control</h2>
 			<p>
 				<button id="step" ng-click="step()">Step</button>
+				<button id="run" ng-click="run()">Run</button>
+				<button id="stop" ng-click="stop()">Stop</button>
 			</p>
 			<table>
 				<tr>
