add local file loading from localStorage

--- a/public/index.html
+++ b/public/index.html
@@ -323,7 +323,7 @@
 									<div class="container-fluid" id="loadButtons">
 										<div class="form-row">
 											<div class="col-8"></div>
-											<div class="col-2"><button class="form-control btn btn-outline-success" id="loadLocalButton">Load File</button></div>
+											<div class="col-2"><button class="form-control btn btn-outline-success" ng-click="loadFile()" id="loadButton">Load File</button></div>
 											<div class="col-2"><button class="form-control btn btn-outline-danger" data-dismiss="modal" id="loadCancelButton">Cancel</button></div>
 										</div>
 									</div>
