clarify authorship & comments

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,9 @@
 <!doctype html>
 <html lang="en">
+	<!--
+		zedide: an ide for writing z80 assembly language, assembling it, running and debugging it.
+		author: rob andrews <rob@aphlor.org>
+	-->
 	<head>
 		<title>ZedIDE: Z80 in a browser</title>
 		<meta charset="utf-8" />
